[package]
name = "tmkms-p2p"
description = "Implementation of CometBFT's encrypted P2P protocol"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/iqlusioninc/tmkms"
readme = "README.md"
keywords = ["cometbft", "cosmos", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.85"
authors = [
    "Tony Arcieri <tony@iqlusion.io>",
    "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
    "Informal Systems <hello@informal.systems>",
    "Alexander Simmerl <a.simmerl@gmail.com>",
]

[dependencies]
aead = { version = "0.5", default-features = false }
base16ct = { version = "0.2", features = ["alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["rand_core"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core", "zeroize"] }
hkdf = { version = "0.12.3", default-features = false }
merlin = { version = "3", default-features = false }
prost = { version = "0.13", default-features = false, features = ["derive", "std"] }
rand_core = { version = "0.6", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

# optional dependencies
tokio = { version = "1", optional = true, features = ["io-util", "net"] }

[features]
async = ["dep:tokio"]

[dev-dependencies]
hex-literal = "1"
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
